--- a/HalloDoc Project/Views/Admin/NewTable.cshtml
+++ b/HalloDoc Project/Views/Admin/NewTable.cshtml
@@ -1,16 +1,16 @@
 ﻿@model AdminDashboardViewModel
 <div class="mt-3 table-responsive rounded">
-    <table class="table admin-dashboard-tables shadow-lg d-md-block d-none">
+    <table class="table admin-dashboard-tables shadow-lg d-md-block d-none table-full-width">
         <colgroup>
-            <col span="1" style="width: 17%;">
-            <col span="1" style="width: 8%;">
-            <col span="1" style="width: 9%;">
-            <col span="1" style="width: 8%;">
-            <col span="1" style="width: 12%;">
-            <col span="1" style="width: 19%;">
-            <col span="1" style="width: 12%;">
-            <col span="1" style="width: 9%;">
-            <col span="1" style="width: 6%;">
+            <col style="width: 17%;">
+            <col style="width: 8%;">
+            <col style="width: 9%;">
+            <col style="width: 8%;">
+            <col style="width: 12%;">
+            <col style="width: 19%;">
+            <col style="width: 12%;">
+            <col style="width: 9%;">
+            <col style="width: 6%;">
         </colgroup>
         <thead class="table-head align-middle">
             <tr>
